  ivy configuration added, handles all libraries except for tjws, project 3rd party libraries updated
  ConnectionPools methods synchronized
  Renamed ivy runtime configurations
  MethodLogger refactored and improved
  LogEntry removed
  MethodLogger synchronized, enable/disable implemented
  DatabaseUtil.query() moved back to DatabaseConnection
  PropertyImpl no longer implements Serializable
  Property.PropertyValueFetcher added
  ServerLog now contains the MethodLogger entries instead of the logger itself
  ServerLog renamed ClientLog
  ConnectionPoolImpl.connectionPoolStatistics is now a LinkedList
  JasperReportsWrapper, replaced usage of deprecated method
  LoadTestModel.resetChartData() did not reset failed runs
  EntityImpl, minor optimizations, minimizing the usage of Property.getPropertyID() where possible
  Entity.setValue() overloaded with a validateType parameter, again
  EntityResultPacker calls the above method with false, no need to validate the types coming from the database
  BooleanProperty.toSQLValue() and getColumnType() moved up to ColumnProperty
  EntityConnectionImpl.setParameterValue() simplified, using the above
  PropertyImpl, value fetcher bug fixed, now handles BooleanProperty correctly
  LocalEntityConnectionProvider no longer logs calls to isConnected and isValid
  Petstore demo now uses BooleanProperty
  EntityDefinitionImpl.KeyGenerator implementations refactored
  Property.PropertyValueFetcher renamed to ValueFetcher
  Property.ColumnProperty.toSQLValue() renamed to toColumnValue()
  Property.ColumnValueConverter added
  Property.ColumnProperty.fromColumnValue() added
  Property.ColumnProperty.setColumnValueConverter() added
  BooleanProperty removed
  Previous KeyGenerator refactoring broke it, needs to lazily load the query due to remote connections
  EntitySelectCriteria.selectForUpdate field renamed to forUpdate along with accessors
  SubQueryProperty constructor overloaded with columnType parameter