@@ -3268,4 +3268,6 @@
   BooleanProperty removed
   Previous KeyGenerator refactoring broke it, needs to lazily load the query due to remote connections
   EntitySelectCriteria.selectForUpdate field renamed to forUpdate along with accessors
-  SubQueryProperty constructor overloaded with columnType parameter
+  SubqueryPropertyImpl constructor overloaded with columnType parameter
+  SubqueryPropertyImpl, removed unused constructor
+  empdept ddl script simplified a bit
